--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,11 +25,6 @@ textarea{
   white-space: pre-wrap;
 }
 
-.time-block{
-  text-align: center;
-  border-radius: 15px;
-}
-
 .row {
   white-space: pre-wrap;
   height: 80px;
@@ -42,30 +37,32 @@ textarea{
   border-top: 1px dashed #000000;
 }
 
-.past {
-  background-color: #d3d3d3;
-  color: white;
+@media screen and (max-width: 768px) {
+#time-block1 {
+  margin: 30px  0;
 }
-
-.present {
-  background-color: #ff6961;
-  color: white;
+#time-block2{
+  margin: 30px  0;
 }
-
-.future {
-  background-color: #77dd77;
-  color: white;
+#time-block3{
+  margin: 30px  0;
 }
-
-.saveBtn {
-  border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
+#time-block4{
+  margin: 30px  0;
 }
-
-.saveBtn i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
+#time-block5{
+  margin: 30px  0;
+}
+#time-block6{
+  margin: 30px  0;
+}
+#time-block7{
+  margin: 30px  0;
+}
+#time-block8{
+  margin: 30px  0;
+}
+#time-block9{
+  margin: 30px  0;
+}
 }
